Swagger more endpoints and Kafka
