# dhiman/mini-project/bookkeeping_service/docs/swagger.yaml
@@ -28,6 +28,40 @@ definitions:
 info:
   contact: {}
 paths:
+  /bookkeeping/medicines:
+    post:
+      consumes:
+      - application/json
+      description: Create a Medicine in the Database using the data sent by them (REGISTER)
+      parameters:
+      - description: Medicine details to be created
+        in: body
+        name: medicineDTO
+        required: true
+        schema:
+          $ref: '#/definitions/models.Medicine'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+      summary: Create a Medicine
+      tags:
+      - /bookkeeping/medicines
   /bookkeeping/medicines/:
     get:
       consumes:
@@ -57,7 +91,7 @@ paths:
             $ref: '#/definitions/dtos.HTTPError'
       summary: Return all Medicines in database from repository.
       tags:
-      - accounts
+      - /bookkeeping/medicines
   /bookkeeping/medicines/{id}:
     get:
       consumes:
@@ -90,7 +124,73 @@ paths:
             $ref: '#/definitions/dtos.HTTPError'
       summary: Get a Medicine by its name.
       tags:
-      - accounts
+      - /bookkeeping/medicines
+  /bookkeeping/medicines/{name}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes the Medicine in the Database using their email.
+      parameters:
+      - description: ID of the Disease (currently its name)
+        in: path
+        name: diseaseName
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Medicine'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+      summary: Deletes Medicines in the Database.
+      tags:
+      - /bookkeeping/medicines
+    put:
+      consumes:
+      - application/json
+      description: Updates the Medicine in the Database using their email.
+      parameters:
+      - description: Medicine details to be created
+        in: body
+        name: medicineDTO
+        required: true
+        schema:
+          $ref: '#/definitions/models.Medicine'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Medicine'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.HTTPError'
+      summary: Updates Medicines in the Database.
+      tags:
+      - /bookkeeping/medicines
   /bookkeeping/medicines/disease/{diseaseName}:
     get:
       consumes:
@@ -124,105 +224,5 @@ paths:
             $ref: '#/definitions/dtos.HTTPError'
       summary: Find all medicines for a Disease identified by its name.
       tags:
-      - accounts
-  /users/medicines:
-    post:
-      consumes:
-      - application/json
-      description: Create a Medicine in the Database using the data sent by them (REGISTER)
-      parameters:
-      - description: Medicine details to be created
-        in: body
-        name: medicineDTO
-        required: true
-        schema:
-          $ref: '#/definitions/models.Medicine'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-      summary: Create a Medicine
-      tags:
-      - accounts
-  /users/medicines/{name}:
-    delete:
-      consumes:
-      - application/json
-      description: Deletes the Medicine in the Database using their email.
-      parameters:
-      - description: ID of the Disease (currently its name)
-        in: path
-        name: diseaseName
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Medicine'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-      summary: Deletes Medicines in the Database.
-      tags:
-      - accounts
-    put:
-      consumes:
-      - application/json
-      description: Updates the Medicine in the Database using their email.
-      parameters:
-      - description: Medicine details to be created
-        in: body
-        name: medicineDTO
-        required: true
-        schema:
-          $ref: '#/definitions/models.Medicine'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Medicine'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dtos.HTTPError'
-      summary: Updates Medicines in the Database.
-      tags:
-      - accounts
+      - /bookkeeping/medicines
 swagger: "2.0"
